<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="button_newb">To the listings!</string>
    <string name="app_name">Beer Finder</string>
    <string name="text_newb">You can use this page to explore the different kinds of beer available to you in Gainesville. Checkout the Ale, Wheat, and Saison categories if you need help getting started as these are usually great for newbies! Click the green button below when you are ready to go to the beer listings.</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_browse">Browse Local Bars</string>
    <string name="button_help">Beer Newbie?</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_decide">Help Me Decide!</string>
    <string name="button_new">I\'m new to craft beer, help me!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_help_me">Find the beer right for you</string>
    <string name="title_activity_browse">Browse Local Bars</string>
    <string name="title_activity_beer__flavor">Beer Flavors</string>
    <string name="title_activity_new_beer">Beer Categories</string>
    <string name="SH_Location">Swamp Head Location</string>
    <string name="HoB_Location">House of Beer Location</string>
    <string name="FMB_Location">First Magnitude Bewery Location</string>
    <string name="CB_Location">Crafty Bastards Location</string>
    <string name="WoB_Location">World of Beer Location</string>
    <string name="title_activity_directions">Directions</string>
    <string name="main_screen_app_name">Beer Finder</string>
    <string name="title_activity_first_magnitude_brewery">FirstMagnitudeBrewery</string>
    <string name="title_activity_takeover">Tap Takeover Schedule</string>

</resources>
